...
                    .swipeActions() {
                        Button {
                            withAnimation {
                                database.makeManifest(fromBlueprintWithID: blueprint.id)
                            }
                        } label: {
                            Label("Make Manifest", systemImage: "wand.and.stars")
                        }
                        .tint(.blue)
                        
                        Button {
                            withAnimation {
                                deleteBlueprintID = blueprint.id
...
                    }
                } label: {
                    Text("New Blueprint...")
                }
            }
        }
        .navigationBarTitle("Lists")
        .environment(\.editMode, $editMode) //#2
        .alert(isPresented: $state.equals(.showingAddBlueprintAlert, default: .normal), TextAlert(
            title: "Add Blueprint", message: nil, action: { text in
                if let text = text, !text.isEmpty {
                    self.didAddBlueprint(withTitle: text)
                }
...
