...
    override init() {
        super.init()
        
        if Debug.isDebugMode {
            let id1 = UUID()
            deflatedBlueprints = [
                .init(id: id1, title: "Going Out", items: [
                    .task(.init(id: .init(), title: "Keys")),
                    .task(.init(id: .init(), title: "Wallet")),
                    .task(.init(id: .init(), title: "Vape")),
                ]),
                .init(id: .init(), title: "Work", items: [
                    .blueprint(id1),
...
